# cosi_consumer_framework

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
cosi_consumer_framework/: __init__.py  agent.py  agent_perception.py  asset.py  choice_set.py  environment.py  logging.py  object_registry.py  registrable.py
cosi_consumer_framework/utils/: __init__.py  discounting.py
docs/: api.md  architecture.md  examples.md  index.md
illustrations/: 0_basic_usage.ipynb  1_heating_illustration.ipynb
tests/: conftest.py  test_environment.py  test_object_registry.py  test_registrable.py  test_utils.py
